libraries/ckit/regression/invalid-programs/r46.c
int f(int (*)[4]);

int f(int (*)[]);

main () {
  int (*a)[5];
  f(a);
}
